# fake-autopub-lib

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  invite_contributors.py  pyproject.toml
.github/workflows/: pr-check.yml  release.yml
src/fake_autopub_lib/: __init__.py
